AvklarOmsorgOgForeldreansvarOppdaterer